--- a/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -10,131 +10,169 @@
     <link href="~/plugins/DataTables/css/min.css" rel="stylesheet" />
     <link href="~/plugins/DataTables/css/dataTable.css" rel="stylesheet" />
     <link href="~/plugins/Select2/css/min.css" rel="stylesheet" />
-    <!-- plugins:css -->
-    <link rel="stylesheet" href="~/assets/vendors/feather/feather.css">
-    <link rel="stylesheet" href="~/assets/vendors/ti-icons/css/themify-icons.css">
-    <link rel="stylesheet" href="~/assets/vendors/css/vendor.bundle.base.css">
-    <!-- Plugin css for this page -->
-    <link rel="stylesheet" href="~/assets/vendors/datatables.net-bs4/dataTables.bootstrap4.css">
-    <link rel="stylesheet" href="~/assets/vendors/ti-icons/css/themify-icons.css">
-    <link rel="stylesheet" type="text/css" href="~/assets/js/select.dataTables.min.css">
-    <!-- inject:css -->
-    <link rel="stylesheet" href="~/assets/css/vertical-layout-light/style.css">
+
+    <link rel="stylesheet" href="~/assets/css/styles.min.css" />
 
     <script src="~/plugins/ChartJs/js/Chart.min.js"></script>
 </head>
 <body style="background-color:#f5f7ff">
     @if(User.Identity.IsAuthenticated)
     {
-        <div class="container-scroller">
-            <!-- partial:partials/_navbar.html -->
-            <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
-                <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-                    <a class="navbar-brand brand-logo mr-2" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/assets/img/logos/Logo-Elim-Black.png" class="mr-2" alt="logo" /></a>
-                    <a class="navbar-brand brand-logo-mini" asp-area="" asp-controller="Home" asp-action="Index"><img src="/assets/img/logos/Logo-Sin-Letras-Black.png" alt="logo" width="50" /></a>
-                </div>
-                <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
-                    <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
-                        <span class="icon-menu"></span>
-                    </button>
-                    <ul class="navbar-nav navbar-nav-right">
-                        <li class="nav-item nav-profile dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
-                                <img src="/assets/img/user/profile-user.png" alt="profile" />
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-                                <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Logout">
-                                    <i class="ti-power-off text-primary"></i>
-                                    Cerrar Sesión
-                                </a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-            <!-- partial -->
-            <div class="container-fluid page-body-wrapper">
-                <!-- partial:partials/_settings-panel.html -->
-                <div class="theme-setting-wrapper">
-                    <div id="settings-trigger"><i class="ti-settings"></i></div>
-                    <div id="theme-settings" class="settings-panel">
-                        <i class="settings-close ti-close"></i>
-                        <p class="settings-heading">Tema Lateral</p>
-                        <div class="sidebar-bg-options selected" id="sidebar-light-theme"><div class="img-ss rounded-circle bg-light border mr-3"></div>Blanco</div>
-                        <p class="settings-heading mt-2">Tema Encavezado</p>
-                        <div class="color-tiles mx-0 px-4">
-                            <div class="tiles info"></div>
-                            <div class="tiles dark"></div>
-                            <div class="tiles default"></div>
+        <!--  Body Wrapper -->
+        <div class="page-wrapper" id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
+             data-sidebar-position="fixed" data-header-position="fixed">
+            <!-- Sidebar Start -->
+            <aside class="left-sidebar">
+                <!-- Sidebar scroll-->
+                <div>
+                    <div class="brand-logo d-flex align-items-center justify-content-between">
+                        <a class="text-nowrap logo-img" asp-area="" asp-controller="Home" asp-action="Index">
+                            <img src="/assets/img/logos/Logo-Elim-Black.png" width="180" alt="" />
+                        </a>
+                        <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
+                            <i class="ti ti-x fs-8"></i>
                         </div>
                     </div>
+                    <!-- Sidebar navigation-->
+                    <nav class="sidebar-nav scroll-sidebar" data-simplebar="">
+                        <ul id="sidebarnav">
+                            <!-- SECCION PRINCIPAL -->
+                            <li class="nav-small-cap">
+                                <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+                                <span class="hide-menu">Principal</span>
+                            </li>
+                            <li class="sidebar-item">
+                                <a class="sidebar-link" asp-area="" asp-controller="Home" asp-action="Index" aria-expanded="false">
+                                    <span>
+                                        <i class="ti ti-layout-dashboard"></i>
+                                    </span>
+                                    <span class="hide-menu">Inicio</span>
+                                </a>
+                            </li>
+                            <li class="sidebar-item">
+                                <a class="sidebar-link" asp-area="" asp-controller="Dashboard" asp-action="Index" aria-expanded="false">
+                                    <span>
+                                        <i class="ti ti-layout-dashboard"></i>
+                                    </span>
+                                    <span class="hide-menu">Dashboard</span>
+                                </a>
+                            </li>
+                            <!-- SECCION ADMINISTRACION -->
+                            <li class="nav-small-cap">
+                                <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+                                <span class="hide-menu">Administracion</span>
+                            </li>
+                            <li class="sidebar-item">
+                                <a class="sidebar-link" asp-area="" asp-controller="Membership" asp-action="Index" aria-expanded="false">
+                                    <span>
+                                        <i class="ti ti-layout-dashboard"></i>
+                                    </span>
+                                    <span class="hide-menu">Membresia</span>
+                                </a>
+                            </li>
+                            <li class="sidebar-item">
+                                <a class="sidebar-link" asp-area="" asp-controller="Server" asp-action="Index" aria-expanded="false">
+                                    <span>
+                                        <i class="ti ti-layout-dashboard"></i>
+                                    </span>
+                                    <span class="hide-menu">Servidores</span>
+                                </a>
+                            </li>
+                            <!-- SECCION MANTENIMIENTO -->
+                            <li class="nav-small-cap">
+                                <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+                                <span class="hide-menu">Mantenimiento</span>
+                            </li>
+                            <li class="sidebar-item">
+                                <a class="sidebar-link" asp-area="" asp-controller="ProfessionOrStudy" asp-action="Index" aria-expanded="false">
+                                    <span>
+                                        <i class="ti ti-layout-dashboard"></i>
+                                    </span>
+                                    <span class="hide-menu">Profesion u Oficio</span>
+                                </a>
+                            </li>
+                            <li class="sidebar-item">
+                                <a class="sidebar-link" asp-area="" asp-controller="Privilege" asp-action="Index" aria-expanded="false">
+                                    <span>
+                                        <i class="ti ti-layout-dashboard"></i>
+                                    </span>
+                                    <span class="hide-menu">Privilegios</span>
+                                </a>
+                            </li>
+                            <!-- SECCION SEGURIDAD -->
+                            <li class="nav-small-cap">
+                                <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+                                <span class="hide-menu">Seguridad</span>
+                            </li>
+                            <li class="sidebar-item">
+                                <a class="sidebar-link" asp-area="" asp-controller="Role" asp-action="Index" aria-expanded="false">
+                                    <span>
+                                        <i class="ti ti-layout-dashboard"></i>
+                                    </span>
+                                    <span class="hide-menu">Roles</span>
+                                </a>
+                            </li>
+                            <li class="sidebar-item">
+                                <a class="sidebar-link" asp-area="" asp-controller="User" asp-action="Index" aria-expanded="false">
+                                    <span>
+                                        <i class="ti ti-layout-dashboard"></i>
+                                    </span>
+                                    <span class="hide-menu">Usuarios</span>
+                                </a>
+                            </li>
+                            <li class="sidebar-item">
+                                <a class="sidebar-link" asp-area="" asp-controller="User" asp-action="ChangePassword" aria-expanded="false">
+                                    <span>
+                                        <i class="ti ti-layout-dashboard"></i>
+                                    </span>
+                                    <span class="hide-menu">Cambiar Contraseña</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <!-- End Sidebar navigation -->
                 </div>
-                <!-- partial -->
-                <!-- partial:partials/_sidebar.html -->
-                <nav class="sidebar sidebar-offcanvas" id="sidebar">
-                    <ul class="nav">
-                        <spam class="menu-title">Principal</spam>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">
-                                <i class="icon-grid menu-icon"></i>
-                                <span class="menu-title">Inicio</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Dashboard" asp-action="Index">
-                                <i class="icon-grid menu-icon"></i>
-                                <span class="menu-title">Dashboard</span>
-                            </a>
-                        </li>
-                        <br />
-                        <spam class="menu-title">Administracion</spam>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Membership" asp-action="Index">
-                                <i class="icon-grid menu-icon"></i>
-                                <span class="menu-title">Membresia</span>
-                            </a>
-                        </li>
-                        <br />
-                        <spam class="menu-title">Mantenimiento</spam>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="ProfessionOrStudy" asp-action="Index">
-                                <i class="icon-grid menu-icon"></i>
-                                <span class="menu-title">Profesion u Oficio</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Privilege" asp-action="Index">
-                                <i class="icon-grid menu-icon"></i>
-                                <span class="menu-title">Privilegio</span>
-                            </a>
-                        </li>
-                        <br />
-                        <spam class="menu-title">Seguridad</spam>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Role" asp-action="Index">
-                                <i class="icon-grid menu-icon"></i>
-                                <span class="menu-title">Roles</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="User" asp-action="Index">
-                                <i class="icon-grid menu-icon"></i>
-                                <span class="menu-title">Usuarios</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="User" asp-action="ChangePassword">
-                                <i class="icon-grid menu-icon"></i>
-                                <span class="menu-title">Cambiar Contraseña</span>
-                            </a>
-                        </li>
-                        <br />
-                    </ul>
-                </nav>
-                <div>
-                    <main role="main" style="background-color:#f5f7ff">
+                <!-- End Sidebar scroll-->
+            </aside>
+            <!--  Sidebar End -->
+            <!--  Main wrapper -->
+            <div class="body-wrapper">
+                <!--  Header Start -->
+                <header class="app-header">
+                    <nav class="navbar navbar-expand-lg navbar-light">
+                        <div class="navbar-collapse justify-content-end px-0" id="navbarNav">
+                            <ul class="navbar-nav flex-row ms-auto align-items-center justify-content-end">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown"
+                                       aria-expanded="false">
+                                        <img src="../assets/images/profile/user-1.jpg" alt="" width="35" height="35" class="rounded-circle">
+                                    </a>
+                                    <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up" aria-labelledby="drop2">
+                                        <div class="message-body">
+                                            <a href="javascript:void(0)" class="d-flex align-items-center gap-2 dropdown-item">
+                                                <i class="ti ti-user fs-6"></i>
+                                                <p class="mb-0 fs-3">Mi Información</p>
+                                            </a>
+                                            <a asp-area="" asp-controller="User" asp-action="Logout" class="btn btn-outline-primary mx-3 mt-2 d-block">Cerrar Sesiòn</a>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                </header>
+                <!--  Header End -->
+
+                <!-- Body Render-->
+                <div class="container-fluid">
+                    <main role="main">
                         @RenderBody()
                     </main>
+                </div>
+
+                <!-- Footer -->
+                <div class="py-6 px-6 text-center">
+                    <p class="mb-0 fs-4">&copy; 2024 Desarrollado Por Hector Garcia</p>
                 </div>
             </div>
         </div>
@@ -153,22 +191,14 @@
     <script src="~/plugins/DataTables/js/dataTable.js"></script>
     <script src="~/plugins/Select2/js/min.js"></script>
     <script src="~/plugins/BarCode/js/min.js"></script>
-    <!-- plugins:js -->
-    <script src="~/assets/vendors/js/vendor.bundle.base.js"></script>
-    <!-- Plugin js for this page -->
-    <script src="~/assets/vendors/chart.js/Chart.min.js"></script>
-    <script src="~/assets/vendors/datatables.net/jquery.dataTables.js"></script>
-    <script src="~/assets/vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
-    <script src="~/assets/js/dataTables.select.min.js"></script>
-    <!-- inject:js -->
-    <script src="~/assets/js/off-canvas.js"></script>
-    <script src="~/assets/js/hoverable-collapse.js"></script>
-    <script src="~/assets/js/template.js"></script>
-    <script src="~/assets/js/settings.js"></script>
-    <script src="~/assets/js/todolist.js"></script>
-    <!-- Custom js for this page-->
+
+    <script src="~/assets/libs/jquery/dist/jquery.min.js"></script>
+    <script src="~/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/assets/js/sidebarmenu.js"></script>
+    <script src="~/assets/js/app.min.js"></script>
+    <script src="~/assets/libs/apexcharts/dist/apexcharts.min.js"></script>
+    <script src="~/assets/libs/simplebar/dist/simplebar.js"></script>
     <script src="~/assets/js/dashboard.js"></script>
-    <script src="~/assets/js/Chart.roundedBarCharts.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
