--- a/MCEI.SysRegisAdmin.WebApp/Views/User/Login.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/User/Login.cshtml
@@ -4,33 +4,35 @@
     ViewData["Title"] = "Inicio De Sesión";
 }
 
-<div class="container-scroller">
-    <div class="container-fluid page-body-wrapper full-page-wrapper">
-        <div class="content-wrapper d-flex align-items-center auth px-0">
-            <div class="row w-100 mx-0">
-                <div class="col-lg-4 mx-auto">
-                    <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-                        <div class="brand-logo">
-                            <img src="/assets/img/logos/Logo-Elim-Black.png" alt="logo" width="50">
+<!--  Body Wrapper -->
+<div class="page-wrapper" id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
+     data-sidebar-position="fixed" data-header-position="fixed">
+    <div class="position-relative overflow-hidden radial-gradient min-vh-100 d-flex align-items-center justify-content-center">
+        <div class="d-flex align-items-center justify-content-center w-100">
+            <div class="row justify-content-center w-100">
+                <div class="col-md-8 col-lg-6 col-xxl-3">
+                    <div class="card mb-0">
+                        <div class="card-body">
+                            <a asp-area="" asp-controller="Home" asp-action="Index" class="text-nowrap logo-img text-center d-block py-3 w-100">
+                                <img src="/assets/img/logos/Logo-Elim-Black.png" width="180" alt="">
+                            </a>
+                            <p class="text-center">Sistema de Registro Administrativo</p>
+                            <form asp-action="Login">
+                                <div class="mb-3">
+                                    <label asp-for="Email" class="form-label"></label>
+                                    <input class="form-control" asp-for="Email" aria-describedby="emailHelp" placeholder="Correo Electronico" required>
+                                    <span asp-validation-for="Email"></span>
+                                </div>
+                                <div class="mb-4">
+                                    <label asp-for="Password" class="form-label"></label>
+                                    <input class="form-control" asp-for="Password" placeholder="Contraseña" required>
+                                    <span asp-validation-for="Password"></span>
+                                </div>
+                                <input class="btn btn-primary w-100 py-8 fs-4 mb-4 rounded-2" type="submit" value="Iniciar Sesión"></input!>
+                                <br />
+                                <span class="text-danger">@ViewBag.Error</span>
+                            </form>
                         </div>
-                        <h4>Inicio De Sesión</h4>
-                        <h6 class="font-weight-light">Sistema De Registro Administrativo</h6>
-                        <form class="pt-3" asp-action="Login">
-                            <div class="form-group">
-                                <label asp-for="Email"></label>
-                                <input class="form-control form-control-lg" asp-for="Email" placeholder="Correo Electronico" required>
-                                <span asp-validation-for="Email"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="Password"></label>
-                                <input class="form-control form-control-lg" asp-for="Password" placeholder="Contraseña" required>
-                                <span asp-validation-for="Password"></span>
-                            </div>
-                            <div class="mt-3">
-                                <input class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" type="submit" value="Inicio De Sesión"></input>
-                            </div> <br />
-                            <span class="text-danger">@ViewBag.Error</span>
-                        </form>
                     </div>
                 </div>
             </div>
