--- a/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                             <li class="sidebar-item">
                                 <a class="sidebar-link" asp-area="" asp-controller="Home" asp-action="Index" aria-expanded="false">
                                     <span>
-                                        <i class="ti ti-layout-dashboard"></i>
+                                        <i class="ti ti-home"></i>
                                     </span>
                                     <span class="hide-menu">Inicio</span>
                                 </a>
@@ -65,7 +65,7 @@
                             <li class="sidebar-item">
                                 <a class="sidebar-link" asp-area="" asp-controller="Membership" asp-action="Index" aria-expanded="false">
                                     <span>
-                                        <i class="ti ti-layout-dashboard"></i>
+                                        <i class="ti ti-building-church"></i>
                                     </span>
                                     <span class="hide-menu">Membresia</span>
                                 </a>
@@ -73,7 +73,7 @@
                             <li class="sidebar-item">
                                 <a class="sidebar-link" asp-area="" asp-controller="Server" asp-action="Index" aria-expanded="false">
                                     <span>
-                                        <i class="ti ti-layout-dashboard"></i>
+                                        <i class="ti ti-server-cog"></i>
                                     </span>
                                     <span class="hide-menu">Servidores</span>
                                 </a>
@@ -86,7 +86,7 @@
                             <li class="sidebar-item">
                                 <a class="sidebar-link" asp-area="" asp-controller="ProfessionOrStudy" asp-action="Index" aria-expanded="false">
                                     <span>
-                                        <i class="ti ti-layout-dashboard"></i>
+                                        <i class="ti ti-school"></i>
                                     </span>
                                     <span class="hide-menu">Profesion u Oficio</span>
                                 </a>
@@ -94,7 +94,7 @@
                             <li class="sidebar-item">
                                 <a class="sidebar-link" asp-area="" asp-controller="Privilege" asp-action="Index" aria-expanded="false">
                                     <span>
-                                        <i class="ti ti-layout-dashboard"></i>
+                                        <i class="ti ti-address-book"></i>
                                     </span>
                                     <span class="hide-menu">Privilegios</span>
                                 </a>
@@ -107,7 +107,7 @@
                             <li class="sidebar-item">
                                 <a class="sidebar-link" asp-area="" asp-controller="Role" asp-action="Index" aria-expanded="false">
                                     <span>
-                                        <i class="ti ti-layout-dashboard"></i>
+                                        <i class="ti ti-git-fork"></i>
                                     </span>
                                     <span class="hide-menu">Roles</span>
                                 </a>
@@ -115,7 +115,7 @@
                             <li class="sidebar-item">
                                 <a class="sidebar-link" asp-area="" asp-controller="User" asp-action="Index" aria-expanded="false">
                                     <span>
-                                        <i class="ti ti-layout-dashboard"></i>
+                                        <i class="ti ti-users"></i>
                                     </span>
                                     <span class="hide-menu">Usuarios</span>
                                 </a>
@@ -123,7 +123,7 @@
                             <li class="sidebar-item">
                                 <a class="sidebar-link" asp-area="" asp-controller="User" asp-action="ChangePassword" aria-expanded="false">
                                     <span>
-                                        <i class="ti ti-layout-dashboard"></i>
+                                        <i class="ti ti-refresh"></i>
                                     </span>
                                     <span class="hide-menu">Cambiar Contraseña</span>
                                 </a>
