--- a/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -9,10 +9,9 @@
     <link href="~/plugins/SweetAlert2/css/min.css" rel="stylesheet" />
     <link href="~/plugins/DataTables/css/min.css" rel="stylesheet" />
     <link href="~/plugins/DataTables/css/dataTable.css" rel="stylesheet" />
-    <link href="~/plugins/Select2/css/min.css" rel="stylesheet" />
-
+    <link href="~/plugins/select2/css/min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/assets/css/styles.min.css" />
-
+        <link href="~/assets/css/custom.css" rel="stylesheet" />
     <script src="~/plugins/ChartJs/js/Chart.min.js"></script>
 </head>
 <body style="background-color:#f5f7ff">
@@ -192,7 +191,6 @@
     <script src="~/plugins/Select2/js/min.js"></script>
     <script src="~/plugins/BarCode/js/min.js"></script>
 
-    <script src="~/assets/libs/jquery/dist/jquery.min.js"></script>
     <script src="~/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/assets/js/sidebarmenu.js"></script>
     <script src="~/assets/js/app.min.js"></script>
