--- a/MCEI.SysRegisAdmin.WebApp/Views/Membership/Index.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Membership/Index.cshtml
@@ -5,43 +5,65 @@
     ViewData["Title"] = "Membresia";
     List<ProfessionOrStudy> professionOrStudies = ViewBag.ProfessionOrStudies as List<ProfessionOrStudy>;
 }
-
 <h1>Mantenimiento Para Membresia</h1>
 <hr />
-<form asp-action="Index">
-    <div>
-        <label>Nombre</label>
-        <input type="text" name="Name" placeholder="Ingresar"/>
-    </div>
-    <div>
-        <label>Apellido</label>
-        <input type="text" name="LastName" placeholder="Ingresar"/>
-    </div>
-    <div>
-        <label>Dui</label>
-        <input type="text" name="Dui" id="inputDui" placeholder="Ingresar"/>
-    </div>
-    <div>
-        <label>Profesion u Oficio</label>
-        <select id="IdProfessionOrStudy" name="IdProfessionOrStudy">
-            @foreach (var item in professionOrStudies!)
-            {
-                <option value="@item.Id">@item.Name</option>
-            }
-        </select>
-    </div>
-    <div>
-        <label>Estatus</label>
-        <select name="Status">
-            <option value="1">Activo</option>
-            <option value="2">Inactivo</option>
-        </select>
-    </div>
-    <div>
-        <input type="submit" value="Buscar Miembro"/> &nbsp;&nbsp;
-        <a asp-action="Create">Nueva Membresia</a>
-    </div>
-</form>
+<div class="container">
+    <form asp-action="Index">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="Name">Nombre</label>
+                    <input type="text" class="form-control" name="Name" placeholder="Ingresar" />
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="LastName">Apellido</label>
+                    <input type="text" class="form-control" name="LastName" placeholder="Ingresar" />
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="Dui">Dui</label>
+                    <input type="text" class="form-control" name="Dui" id="inputDui" placeholder="Ingresar" />
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="IdProfessionOrStudy">Profesion u Oficio</label>
+                    <select id="IdProfessionOrStudy" name="IdProfessionOrStudy" class="select2 form-control">
+                        @foreach (var item in professionOrStudies!)
+                        {
+                            <option value="@item.Id">@item.Name</option>
+                        }
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="Status">Estatus</label>
+                    <select class="form-control" name="Status">
+                        <option value="1">Activo</option>
+                        <option value="2">Inactivo</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <input type="submit" class="btn btn-primary" value="Buscar Miembro" /> &nbsp;&nbsp;
+                    <a asp-action="Create" class="btn btn-secondary">Nueva Membresia</a>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
+
 <h2>Tabla de Resultados</h2>
 <table id="ResultData" class="hover" style="width:100%">
     <thead>
@@ -114,8 +136,11 @@
         // Inicializamos el Plugin de Autocompletado y Busqueda De Profesion u Oficio
         $(document).ready(function () {
             $('#IdProfessionOrStudy').select2();
-        });
 
+            // Ocultar el select original
+            $('#IdProfessionOrStudy').hide();
+        });
+        
         document.getElementById('inputDui').addEventListener('input', function (event) {
             var inputValue = event.target.value;
             var formattedValue = formatDui(inputValue);
